Cambios varios para corregir otrografía y  estandarizar algunos textos en plantillas
Cambios varios para corregir otrografía y  estandarizar algunos textos
en plantillas

--- a/TableroSLAs/CalificaPPMCSAT.html
+++ b/TableroSLAs/CalificaPPMCSAT.html
@@ -21,7 +21,7 @@
               <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img border="0" alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Dictaminar&nbsp;Requerimiento SAT</strong></td> 
+                  <td class="th"><strong>Dictaminar&nbsp;requerimiento SAT</strong></td> 
                   <td class="HeaderRight"><img border="0" alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                 </tr>
  
@@ -44,17 +44,17 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="calificacion_rs_AUTid_servicio_cont">Servicio Contractual</label></td> 
+                  <td class="th"><label for="calificacion_rs_AUTid_servicio_cont">Servicio contractual</label></td> 
                   <td>{mc_c_ServContractual_Desc}</td> 
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="calificacion_rs_AUTid_servicio_negocio">Servicio de Negocio</label></td> 
+                  <td class="th"><label for="calificacion_rs_AUTid_servicio_negocio">Servicio de negocio</label></td> 
                   <td>{id_servicio_negocio} </td> 
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="calificacion_rs_AUTid_tipo">Tipo Requerimiento</label></td> 
+                  <td class="th"><label for="calificacion_rs_AUTid_tipo">Tipo requerimiento</label></td> 
                   <td>{id_tipo} </td> 
                 </tr>
  
@@ -65,7 +65,7 @@
  
                 <!-- BEGIN Panel pnlApertura -->
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlAperturaHERR_EST_COST">Uso de una Herramienta para Estimación de Costo y Tiempos</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlAperturaHERR_EST_COST">Uso de una herramienta para estimación de costo y tiempos</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlAperturaHERR_EST_COST" name="{HERR_EST_COST_Name}">
                       <option selected value="">No Aplica</option>
@@ -75,7 +75,7 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlAperturaREQ_SERV">Requisitos de Servicio</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlAperturaREQ_SERV">Requisitos de servicio</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlAperturaREQ_SERV" name="{REQ_SERV_Name}">
                       <option selected value="">No Aplica</option>
@@ -90,7 +90,7 @@
  <!-- END Panel pnlApertura -->
                 <!-- BEGIN Panel pnlCierre -->
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreCUMPL_REQ_FUNC">Cumplimiento en Requisitos Funcionales</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreCUMPL_REQ_FUNC">Cumplimiento en requisitos funcionales</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlCierreCUMPL_REQ_FUNC" name="{CUMPL_REQ_FUNC_Name}">
                       <option selected value="">No Aplica</option>
@@ -108,7 +108,7 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreCALIDAD_PROD_TERM">Calidad de Productos Terminados</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreCALIDAD_PROD_TERM">Calidad de productos terminados</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlCierreCALIDAD_PROD_TERM" name="{CALIDAD_PROD_TERM_Name}">
                       <option selected value="">No Aplica</option>
@@ -126,7 +126,7 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreRETR_ENTREGABLE">Retraso en Entregables</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreRETR_ENTREGABLE">Retraso en entregables</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlCierreRETR_ENTREGABLE" name="{RETR_ENTREGABLE_Name}">
                       <option selected value="">No Aplica</option>
@@ -149,7 +149,7 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreEST_PROY">Calidad de Código</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreEST_PROY">Calidad de código</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlCierreEST_PROY" name="{EST_PROY_Name}">
                       <option selected value="">No Aplica</option>
@@ -167,7 +167,7 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreDEF_FUG_AMB_PROD">Defectos Fugados a Producción</label></td> 
+                  <td class="th1"><label for="calificacion_rs_AUTpnlCierreDEF_FUG_AMB_PROD">Defectos fugados a producción</label></td> 
                   <td class="th1">
                     <select id="calificacion_rs_AUTpnlCierreDEF_FUG_AMB_PROD" name="{DEF_FUG_AMB_PROD_Name}">
                       <option selected value="">No Aplica</option>
