--- a/TableroSLAs/Catalogos/ReportesMyM.html
+++ b/TableroSLAs/Catalogos/ReportesMyM.html
@@ -85,14 +85,14 @@ jQuery(function ($) {
       <table class="Header" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td class="HeaderLeft"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-          <td class="th"><strong>Lista de Reportes de Metricas y Mediciones </strong></td> 
+          <td class="th"><strong>Lista de reportes de métricas y mediciones </strong></td> 
           <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td>
         </tr>
       </table>
  
       <table class="Grid" cellspacing="0" cellpadding="0">
         <tr class="Row">
-          <td colspan="3">Total de Registros:&nbsp;{ReportesMyM1_TotalRecords}</td>
+          <td colspan="3">Total de registros:&nbsp;{ReportesMyM1_TotalRecords}</td>
         </tr>
  
         <tr class="Caption">
@@ -102,7 +102,7 @@ jQuery(function ($) {
           <!-- BEGIN Desc_On --><img alt="Descendente" src="../Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Nombre --></th>
  
           <th scope="col">
-          <!-- BEGIN Sorter Sorter_Descripcion --><span class="Sorter"><a href="{Sort_URL}" id="ReportesMyM1Sorter_Descripcion">Descripcion</a> 
+          <!-- BEGIN Sorter Sorter_Descripcion --><span class="Sorter"><a href="{Sort_URL}" id="ReportesMyM1Sorter_Descripcion">Descripción</a> 
           <!-- BEGIN Asc_On --><img alt="Ascendente" src="../Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descendente" src="../Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Descripcion --></th>
  
@@ -126,7 +126,7 @@ jQuery(function ($) {
         <!-- END NoRecords -->
         <tr class="Footer">
           <td colspan="3"><a href="{ReportesMyM1_Insert_Src}" id="ReportesMyM1ReportesMyM1_Insert">Agregar Nuevo</a>&nbsp; 
-            <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+            <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página 
             <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
               <option selected value="">-</option>
  {PageSize_Options}
@@ -171,7 +171,7 @@ jQuery(function ($) {
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="ReportesMyM2Descripcion">Descripcion</label></td> 
+            <td class="th"><label for="ReportesMyM2Descripcion">Descripción</label></td> 
             <td><input type="text" id="ReportesMyM2Descripcion" value="{Descripcion}" maxlength="250" size="50" name="{Descripcion_Name}"></td>
           </tr>
  
