--- a/TableroSLAs/Catalogos/ServiciosNegocio.html
+++ b/TableroSLAs/Catalogos/ServiciosNegocio.html
@@ -45,58 +45,54 @@ jQuery(function ($) {
 <p>
 <!-- BEGIN Record mc_c_servicioSearch --><br>
 <form id="mc_c_servicioSearch" method="post" name="{HTMLFormName}" action="{Action}">
-  <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+  <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td valign="top">
-        <table class="Header" cellspacing="0" cellpadding="0" border="0">
+        <table class="Header" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td class="HeaderLeft"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
             <td class="th"><strong>Buscar</strong></td> 
-            <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
+            <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td>
           </tr>
- 
         </table>
  
         <table class="Record" cellspacing="0" cellpadding="0">
           <!-- BEGIN Error -->
           <tr id="{@error-block}" class="Error">
-            <td colspan="2">{Error}</td> 
+            <td colspan="2">{Error}</td>
           </tr>
- <!-- END Error -->
+          <!-- END Error -->
           <tr class="Controls">
             <td class="th"><label for="mc_c_servicioSearchs_nombre">Nombre</label></td> 
-            <td><input type="text" id="mc_c_servicioSearchs_nombre" maxlength="250" size="50" value="{s_nombre}" name="{s_nombre_Name}"></td> 
+            <td><input type="text" id="mc_c_servicioSearchs_nombre" value="{s_nombre}" maxlength="250" size="50" name="{s_nombre_Name}"></td>
           </tr>
  
           <tr class="Bottom">
             <td style="TEXT-ALIGN: right" colspan="2">
-              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_c_servicioSearchButton_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td> 
+              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_c_servicioSearchButton_DoSearch" class="Button" value="Buscar" alt="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
           </tr>
- 
         </table>
- </td> 
+      </td>
     </tr>
- 
   </table>
 </form>
 <!-- END Record mc_c_servicioSearch --></p>
 &nbsp;<br>
 <!-- BEGIN Grid mc_c_servicio -->
-<table id="mc_c_servicio" class="MainTable" cellspacing="0" cellpadding="0" border="0">
+<table id="mc_c_servicio" class="MainTable" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td valign="top">
-      <table class="Header" cellspacing="0" cellpadding="0" border="0">
+      <table class="Header" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td class="HeaderLeft"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-          <td class="th"><strong>Servicios de Negocio </strong></td> 
-          <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
+          <td class="th"><strong>Servicios de negocio </strong></td> 
+          <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td>
         </tr>
- 
       </table>
  
       <table class="Grid" cellspacing="0" cellpadding="0">
         <tr class="Row">
-          <td colspan="2">Total de Registros:&nbsp;{mc_c_servicio_TotalRecords}</td> 
+          <td colspan="2">Total de Registros:&nbsp;{mc_c_servicio_TotalRecords}</td>
         </tr>
  
         <tr class="Caption">
@@ -109,26 +105,25 @@ jQuery(function ($) {
           <!-- BEGIN Sorter Sorter_nombre --><span class="Sorter"><a href="{Sort_URL}" id="mc_c_servicioSorter_nombre">Nombre</a> 
           <!-- BEGIN Asc_On --><img alt="Ascendente" src="../Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descendente" src="../Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_nombre --></th>
- 
         </tr>
  
         <!-- BEGIN Row -->
         <tr class="Row">
           <td style="TEXT-ALIGN: right"><a href="{id_servicio_Src}" id="mc_c_servicioid_servicio_{mc_c_servicio:rowNumber}">{id_servicio}</a>&nbsp;</td> 
-          <td>{nombre}&nbsp;</td> 
+          <td>{nombre}&nbsp;</td>
         </tr>
  <!-- END Row -->
         <!-- BEGIN NoRecords -->
         <tr class="NoRecords">
-          <td colspan="2">No hay registros</td> 
+          <td colspan="2">No hay registros</td>
         </tr>
- <!-- END NoRecords -->
+        <!-- END NoRecords -->
         <tr class="Footer">
           <td colspan="2"><a href="{mc_c_servicio_Insert_Src}" id="mc_c_serviciomc_c_servicio_Insert">Agregar Nuevo</a>&nbsp; 
-            <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+            <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página 
             <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
               <option selected value="">-</option>
- {PageSize_Options} 
+ {PageSize_Options}
             </select>
  
             <!-- BEGIN First_On --><a href="{First_URL}"><img alt="{First_URL}" src="../Styles/{CCS_Style}/Images/First.gif"></a> <!-- END First_On -->
@@ -138,50 +133,46 @@ jQuery(function ($) {
             <!-- BEGIN Next_On --><a href="{Next_URL}"><img alt="{Next_URL}" src="../Styles/{CCS_Style}/Images/Next.gif"></a> <!-- END Next_On -->
             <!-- BEGIN Next_Off --><img alt="{Next_URL}" src="../Styles/{CCS_Style}/Images/NextOff.gif"><!-- END Next_Off -->
             <!-- BEGIN Last_On --><a href="{Last_URL}"><img alt="{Last_URL}" src="../Styles/{CCS_Style}/Images/Last.gif"></a> <!-- END Last_On -->
-            <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="../Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td> 
+            <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="../Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td>
         </tr>
- 
       </table>
- </td> 
+    </td>
   </tr>
 </table>
 <!-- END Grid mc_c_servicio --><br>
 <!-- BEGIN Record mc_c_servicio1 -->
 <form id="mc_c_servicio1" method="post" name="{HTMLFormName}" action="{Action}">
-  <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+  <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td valign="top">
-        <table class="Header" cellspacing="0" cellpadding="0" border="0">
+        <table class="Header" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td class="HeaderLeft"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-            <td class="th"><strong>Agregar/Editar Servicio de Negocio</strong></td> 
-            <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
+            <td class="th"><strong>Agregar/Editar servicio de negocio</strong></td> 
+            <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td>
           </tr>
- 
         </table>
  
         <table class="Record" cellspacing="0" cellpadding="0">
           <!-- BEGIN Error -->
           <tr id="ErrorBlock" class="Error">
-            <td colspan="2">{Error}</td> 
+            <td colspan="2">{Error}</td>
           </tr>
- <!-- END Error -->
+          <!-- END Error -->
           <tr class="Controls">
             <td class="th"><label for="mc_c_servicio1nombre">Nombre</label></td> 
-            <td><input type="text" id="mc_c_servicio1nombre" maxlength="250" size="50" value="{nombre}" name="{nombre_Name}"><input type="hidden" name="{Hidden1_Name}" value="{Hidden1}" id="mc_c_servicio1Hidden1"></td> 
+            <td><input type="text" id="mc_c_servicio1nombre" value="{nombre}" maxlength="250" size="50" name="{nombre_Name}"><input type="hidden" id="mc_c_servicio1Hidden1" value="{Hidden1}" name="{Hidden1_Name}"></td>
           </tr>
  
           <tr class="Bottom">
             <td style="TEXT-ALIGN: right" colspan="2">
-              <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_c_servicio1Button_Insert" class="Button" alt="Agregar" value="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
-              <!-- BEGIN Button Button_Update --><input type="submit" id="mc_c_servicio1Button_Update" class="Button" alt="Enviar" value="Enviar" name="{Button_Name}"><!-- END Button Button_Update -->
-              <!-- BEGIN Button Button_Cancel --><input type="submit" id="mc_c_servicio1Button_Cancel" class="Button" alt="Cancelar" value="Cancelar" name="{Button_Name}"><!-- END Button Button_Cancel --><input type="hidden" id="mc_c_servicio1id_servicio_padre" value="{id_servicio_padre}" name="{id_servicio_padre_Name}"><input type="hidden" id="mc_c_servicio1descripcion" value="{descripcion}" name="{descripcion_Name}"><input type="hidden" id="mc_c_servicio1id_tipo_servicio" value="{id_tipo_servicio}" name="{id_tipo_servicio_Name}"></td> 
+              <!-- BEGIN Button Button_Insert --><input type="submit" id="mc_c_servicio1Button_Insert" class="Button" value="Agregar" alt="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
+              <!-- BEGIN Button Button_Update --><input type="submit" id="mc_c_servicio1Button_Update" class="Button" value="Enviar" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Update -->
+              <!-- BEGIN Button Button_Cancel --><input type="submit" id="mc_c_servicio1Button_Cancel" class="Button" value="Cancelar" alt="Cancelar" name="{Button_Name}"><!-- END Button Button_Cancel --><input type="hidden" id="mc_c_servicio1id_servicio_padre" value="{id_servicio_padre}" name="{id_servicio_padre_Name}"><input type="hidden" id="mc_c_servicio1descripcion" value="{descripcion}" name="{descripcion_Name}"><input type="hidden" id="mc_c_servicio1id_tipo_servicio" value="{id_tipo_servicio}" name="{id_tipo_servicio_Name}"></td>
           </tr>
- 
         </table>
- </td> 
+      </td>
     </tr>
- 
   </table>
 </form>
 <!-- END Record mc_c_servicio1 --><br>
