--- a/TableroSLAs/Catalogos/Usuarios.html
+++ b/TableroSLAs/Catalogos/Usuarios.html
@@ -103,7 +103,7 @@ $(document).ready(function(){
                   <td><label for="mc_c_usuariosSearchs_Grupo">Grupo</label>&nbsp;</td> 
                   <td>
                     <select id="mc_c_usuariosSearchs_Grupo" name="{s_Grupo_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_Grupo_Options}
                     </select>
  &nbsp; </td>
@@ -134,7 +134,7 @@ $(document).ready(function(){
             <table class="Header" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td class="HeaderLeft"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                <td class="th"><strong>Lista de Usuarios </strong></td> 
+                <td class="th"><strong>Lista de usuarios </strong></td> 
                 <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td>
               </tr>
             </table>
@@ -213,7 +213,7 @@ $(document).ready(function(){
               <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Editar Usuario</strong></td> 
+                  <td class="th"><strong>Editar usuario</strong></td> 
                   <td class="HeaderRight"><img alt="" src="../Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
               </table>
@@ -243,7 +243,7 @@ $(document).ready(function(){
                   <td class="th"><label for="mc_c_usuarios1Nivel">Nivel</label></td> 
                   <td>
                     <select id="mc_c_usuarios1Nivel" name="{Nivel_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {Nivel_Options}
                     </select>
  </td>
@@ -253,7 +253,7 @@ $(document).ready(function(){
                   <td class="th"><label for="mc_c_usuarios1Grupo">Grupo</label></td> 
                   <td>
                     <select id="mc_c_usuarios1Grupo" name="{Grupo_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {Grupo_Options}
                     </select>
  </td>
@@ -273,7 +273,7 @@ $(document).ready(function(){
                   <td class="th">CDS Preferido</td> 
                   <td>
                     <select id="mc_c_usuarios1CDSDefault" name="{CDSDefault_Name}">
-                      <option selected value="0">Seleccionar Valor</option>
+                      <option selected value="0">Seleccionar valor</option>
                       {CDSDefault_Options}
                     </select>
  </td>
@@ -288,7 +288,7 @@ $(document).ready(function(){
                   <td class="th">&nbsp;Administración RAPE</td> 
                   <td>
                     <select id="mc_c_usuarios1ListBox1" name="{ListBox1_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {ListBox1_Options}
                     </select>
  </td>
@@ -385,7 +385,7 @@ $(document).ready(function(){
                 <!-- END NoRecords -->
                 <tr class="Footer">
                   <td style="TEXT-ALIGN: right" colspan="3">
-                    <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                    <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página 
                     <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                       <option selected value="">-</option>
  {PageSize_Options}
