--- a/TableroSLAs/ConfigDeCargas/ProcesoCargaAList.html
+++ b/TableroSLAs/ConfigDeCargas/ProcesoCargaAList.html
@@ -88,7 +88,7 @@ jQuery(function ($) {
  
           <tr class="Bottom">
             <td style="TEXT-ALIGN: right" colspan="2">
-              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="proceso_carga_archivosSearchButton_DoSearch" class="Button" value="Search" alt="Search" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="proceso_carga_archivosSearchButton_DoSearch" class="Button" value="Buscar" alt="Search" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
           </tr>
         </table>
       </td> 
@@ -105,7 +105,7 @@ jQuery(function ($) {
       <table class="Header" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-          <td class="th"><strong>Lista&nbsp;de Procesos de&nbsp;Carga </strong></td> 
+          <td class="th"><strong>Lista&nbsp;de procesos de&nbsp;carga </strong></td> 
           <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
         </tr>
       </table>
@@ -118,7 +118,7 @@ jQuery(function ($) {
           <!-- BEGIN Desc_On --><img alt="Descending" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_cve_carga --></th>
  
           <th scope="col">
-          <!-- BEGIN Sorter Sorter_descripcion --><span class="Sorter"><a href="{Sort_URL}" id="proceso_carga_archivosSorter_descripcion">Descripcion</a> 
+          <!-- BEGIN Sorter Sorter_descripcion --><span class="Sorter"><a href="{Sort_URL}" id="proceso_carga_archivosSorter_descripcion">Descripción</a> 
           <!-- BEGIN Asc_On --><img alt="Ascending" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descending" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_descripcion --></th>
  
@@ -197,12 +197,12 @@ jQuery(function ($) {
  <!-- END Row -->
         <!-- BEGIN NoRecords -->
         <tr class="NoRecords">
-          <td colspan="16">No records</td>
+          <td colspan="16">No hay registros</td>
         </tr>
         <!-- END NoRecords -->
         <tr class="Footer">
           <td colspan="16"><a href="{proceso_carga_archivos_Insert_Src}" id="proceso_carga_archivosproceso_carga_archivos_Insert">Agregar proceso</a>&nbsp; 
-            <!-- BEGIN Navigator Navigator --><span class="Navigator">Records per page 
+            <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
             <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
               <option selected value="">-</option>
  {PageSize_Options}
