--- a/TableroSLAs/PPMCsApbCuadroNSRSxls.html
+++ b/TableroSLAs/PPMCsApbCuadroNSRSxls.html
@@ -53,7 +53,7 @@
                   <td class="th"><label for="mc_calificacion_rs_MCs_id_proveedor">CDS </label></td> 
                   <td>
                     <select id="mc_calificacion_rs_MCs_id_proveedor" name="{s_id_proveedor_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_id_proveedor_Options}
                     </select>
  </td> 
@@ -122,7 +122,7 @@
                 <th style="TEXT-ALIGN: center" scope="col">% cumplimiento</th>
  
                 <th style="TEXT-ALIGN: center" scope="col">
-                <!-- BEGIN Sorter Sorter_Meta --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter_Meta">Valor Objetivo</a> 
+                <!-- BEGIN Sorter Sorter_Meta --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter_Meta">Valor objetivo</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Meta --></th>
  
@@ -130,7 +130,7 @@
                 vs Objetivo</th>
  
                 <th style="TEXT-ALIGN: center" scope="col">
-                <!-- BEGIN Sorter Sorter_pena --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter_pena">Penalizacion</a> 
+                <!-- BEGIN Sorter Sorter_pena --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter_pena">Penalización</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_pena --></th>
               </tr>
@@ -153,7 +153,7 @@
               <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="7">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
@@ -213,7 +213,7 @@
                 <th scope="col">&nbsp;% cumplimiento</th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_ValorObj --><span class="Sorter"><a href="{Sort_URL}" id="Grid3Sorter_ValorObj">Valor Objetivo</a> 
+                <!-- BEGIN Sorter Sorter_ValorObj --><span class="Sorter"><a href="{Sort_URL}" id="Grid3Sorter_ValorObj">Valor objetivo</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_ValorObj --></th>
  
@@ -223,7 +223,7 @@
                 </th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Penalizacion --><span class="Sorter"><a href="{Sort_URL}" id="Grid3Sorter_Penalizacion">Penalizacion</a> 
+                <!-- BEGIN Sorter Sorter_Penalizacion --><span class="Sorter"><a href="{Sort_URL}" id="Grid3Sorter_Penalizacion">Penalización</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Penalizacion --></th>
               </tr>
@@ -246,7 +246,7 @@
               <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="7">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
@@ -279,7 +279,7 @@
             <table class="Header" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                <td class="th"><strong>Cuadro NS RSs de Modelo del Gobierno</strong></td> 
+                <td class="th"><strong>Cuadro NS RSs de Modelo de Gobierno</strong></td> 
                 <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
               </tr>
             </table>
@@ -306,7 +306,7 @@
                 <th style="TEXT-ALIGN: center" scope="col">% cumplimiento</th>
  
                 <th style="TEXT-ALIGN: center" scope="col">
-                <!-- BEGIN Sorter Sorter_Meta --><span class="Sorter"><a href="{Sort_URL}" id="Grid2Sorter_Meta">Valor Objetivo</a> 
+                <!-- BEGIN Sorter Sorter_Meta --><span class="Sorter"><a href="{Sort_URL}" id="Grid2Sorter_Meta">Valor objetivo</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Meta --></th>
  
@@ -314,7 +314,7 @@
                 vs Objetivo</th>
  
                 <th style="TEXT-ALIGN: center" scope="col">
-                <!-- BEGIN Sorter Sorter_pena --><span class="Sorter"><a href="{Sort_URL}" id="Grid2Sorter_pena">Penalizacion</a> 
+                <!-- BEGIN Sorter Sorter_pena --><span class="Sorter"><a href="{Sort_URL}" id="Grid2Sorter_pena">Penalización</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_pena --></th>
               </tr>
@@ -337,7 +337,7 @@
               <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="7">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
