--- a/TableroSLAs/PPMCsApbDetalleRSxls.html
+++ b/TableroSLAs/PPMCsApbDetalleRSxls.html
@@ -64,7 +64,7 @@
                   <td class="th"><label for="grdDetalleRS1s_id_proveedor">Proveedor</label></td> 
                   <td>
                     <select id="grdDetalleRS1s_id_proveedor" name="{s_id_proveedor_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_id_proveedor_Options}
                     </select>
  </td> 
@@ -114,7 +114,7 @@
  
             <table class="Grid" cellspacing="0" cellpadding="0">
               <tr class="Row">
-                <td colspan="100">Total de Registros:&nbsp;{Grid1_TotalRecords}</td>
+                <td colspan="100">Total de registros:&nbsp;{Grid1_TotalRecords}</td>
               </tr>
             </table>
  
@@ -122,21 +122,21 @@
               <thead>
                 <tr class="Caption">
                   <th scope="col">
-                  <!-- BEGIN Sorter Sorter_ServContractual --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_ServContractual">Servicio Contractual</a> 
+                  <!-- BEGIN Sorter Sorter_ServContractual --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_ServContractual">Servicio contractual</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_ServContractual --></th>
  
                   <th scope="col">
-                  <!-- BEGIN Sorter Sorter_ServNegocio --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_ServNegocio">Servicio de Negocio</a> 
+                  <!-- BEGIN Sorter Sorter_ServNegocio --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_ServNegocio">Servicio de negocio</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_ServNegocio --></th>
  
                   <th scope="col">
-                  <!-- BEGIN Sorter Sorter_id_ppmc --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_id_ppmc">ID PPMC</a> 
+                  <!-- BEGIN Sorter Sorter_id_ppmc --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_id_ppmc">Id PPMC</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_id_ppmc --></th>
  
-                  <th scope="col">Id Estimación</th>
+                  <th scope="col">Id estimación</th>
  
                   <th scope="col">
                   <!-- BEGIN Sorter Sorter_Tipo --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_Tipo">Tipo</a> 
@@ -150,35 +150,35 @@
  
                   <th scope="col">
                   <!-- BEGIN Sorter Sorter_HERR_EST_COST --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_HERR_EST_COST">Uso de una<br>
-                  Herramienta para<br>
-                  Estimación<br>
-                  de Costo y Tiempos</a> 
+                  herramienta para<br>
+                  estimación<br>
+                  de costo y tiempos</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_HERR_EST_COST --></th>
  
                   <th scope="col">
                   <!-- BEGIN Sorter Sorter_REQ_SERV --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_REQ_SERV">Requisitos<br>
-                  de Servicio</a> 
+                  de servicio</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_REQ_SERV --></th>
  
                   <th scope="col">
                   <!-- BEGIN Sorter Sorter_CUMPL_REQ_FUNC --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_CUMPL_REQ_FUNC">Cumplimiento en<br>
-                  Requisitos<br>
-                  Funcionales</a> 
+                  requisitos<br>
+                  funcionales</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_CUMPL_REQ_FUNC --></th>
  
                   <th scope="col">
                   <!-- BEGIN Sorter Sorter_CALIDAD_PROD_TERM --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_CALIDAD_PROD_TERM">Calidad de<br>
-                  Productos<br>
-                  Terminados</a> 
+                  productos<br>
+                  terminados</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_CALIDAD_PROD_TERM --></th>
  
                   <th scope="col">
                   <!-- BEGIN Sorter Sorter_RETR_ENTREGABLE --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_RETR_ENTREGABLE">Retraso en<br>
-                  Entregables</a> 
+                  entregables</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_RETR_ENTREGABLE --></th>
  
@@ -189,9 +189,9 @@
  
                   <th scope="col">
                   <!-- BEGIN Sorter Sorter_DEF_FUG_AMB_PROD --><span class="Sorter"><a href="{Sort_URL}" id="grdDetalleRSSorter_DEF_FUG_AMB_PROD">Defectos<br>
-                  Fugados al<br>
-                  Ambiente<br>
-                  Productivo</a> 
+                  fugados al<br>
+                  ambiente<br>
+                  productivo</a> 
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_DEF_FUG_AMB_PROD --></th>
  
@@ -200,7 +200,7 @@
                   <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                   <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Obs_manuales --></th>
  
-                  <th colspan="85" scope="col">Liga Evidencia</th>
+                  <th colspan="85" scope="col">Liga evidencia</th>
  
                   <th scope="col">Observaciones SAT</th>
                 </tr>
@@ -251,7 +251,7 @@
               <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="100">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
@@ -329,21 +329,21 @@
  
                 <th scope="col">
                 <!-- BEGIN Sorter Sorter_CUMPL_REQ_FUN --><span class="Sorter"><a href="{Sort_URL}" id="grid_capcSorter_CUMPL_REQ_FUN">Cumplimiento de Requisitos<br>
-                Funcionales</a> 
+                funcionales</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_CUMPL_REQ_FUN --></th>
  
                 <th scope="col">
                 <!-- BEGIN Sorter Sorter_CALIDAD_PROD_TERM --><span class="Sorter"><a href="{Sort_URL}" id="grid_capcSorter_CALIDAD_PROD_TERM">Calidad de<br>
-                Productos<br>
-                Terminados<br>
-                (Por entregable de cada Servicio)</a> 
+                productos<br>
+                terminados<br>
+                (Por entregable de cada servicio)</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_CALIDAD_PROD_TERM --></th>
  
                 <th scope="col">
                 <!-- BEGIN Sorter Sorter_DEDUC_OMISION --><span class="Sorter"><a href="{Sort_URL}" id="grid_capcSorter_DEDUC_OMISION">Deductivas<br>
-                por Omisión</a> 
+                por omisión</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_DEDUC_OMISION --></th>
  
@@ -441,7 +441,7 @@
               <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="14">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
