--- a/TableroSLAs/PPMCsApbLista.html
+++ b/TableroSLAs/PPMCsApbLista.html
@@ -57,11 +57,11 @@
                         <td class="th"><label for="grsBuscas_id_proveedor">Proveedor</label></td> 
                         <td>
                           <select id="grsBuscas_id_proveedor" name="{s_id_proveedor_Name}">
-                            <option selected value="">Seleccionar Valor</option>
+                            <option selected value="">Seleccionar valor</option>
  {s_id_proveedor_Options} 
                           </select>
  </td> 
-                        <td class="th"><label for="grsBuscas_numero">Numero</label></td> 
+                        <td class="th"><label for="grsBuscas_numero">Número</label></td> 
                         <td><input type="text" id="grsBuscas_numero" maxlength="25" size="25" value="{s_numero}" name="{s_numero_Name}"></td> 
                         <td class="th"><label for="grsBuscas_mesparam">Mes</label></td> 
                         <td>
@@ -73,14 +73,14 @@
                         <td class="th"><label for="grsBuscas_anioparam">Año</label></td> 
                         <td>
                           <select id="grsBuscas_anioparam" name="{s_anioparam_Name}">
-                            <option selected value="">Seleccionar Valor</option>
+                            <option selected value="">Seleccionar valor</option>
  {s_anioparam_Options} 
                           </select>
  </td> 
                         <td>Analista&nbsp;</td> 
                         <td>
                           <select id="grsBuscasAnalista" name="{sAnalista_Name}">
-                            <option selected value="">Seleccionar Valor</option>
+                            <option selected value="">Seleccionar valor</option>
  {sAnalista_Options} 
                           </select>
  </td> 
@@ -122,7 +122,7 @@
             <table class="Header" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                <td class="th"><strong>Requerimientos de Apertura </strong></td> 
+                <td class="th"><strong>Requerimientos de apertura </strong></td> 
                 <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
               </tr>
  
@@ -146,24 +146,24 @@
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter1 --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_SERVICIO_NEGOCIO --><span class="Sorter"><a href="{Sort_URL}" id="grdReqsAperturaSorter_SERVICIO_NEGOCIO">Servicio de Negocio</a> 
+                <!-- BEGIN Sorter Sorter_SERVICIO_NEGOCIO --><span class="Sorter"><a href="{Sort_URL}" id="grdReqsAperturaSorter_SERVICIO_NEGOCIO">Servicio de negocio</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_SERVICIO_NEGOCIO --></th>
  
                 <th scope="col">&nbsp;Asignación del<br>
-                Requerimiento</th>
+                requerimiento</th>
  
                 <th scope="col">Fecha de entrega<br>
-                de Propuesta</th>
+                de propuesta</th>
  
-                <th scope="col">Fecha de Aceptación<br>
+                <th scope="col">Fecha de aceptación<br>
                 de Propuesta</th>
  
                 <th scope="col">Duración de<br>
-                Proyecto Hrs</th>
+                proyecto hrs</th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter2 --><span class="Sorter"><a href="{Sort_URL}" id="grdReqsAperturaSorter2">Tipo Requerimiento</a> 
+                <!-- BEGIN Sorter Sorter2 --><span class="Sorter"><a href="{Sort_URL}" id="grdReqsAperturaSorter2">Tipo requerimiento</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter2 --></th>
  
@@ -173,8 +173,8 @@
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_nombre --></th>
  
                 <th scope="col">Uso de una<br>
-                Herramienta<br>
-                de Estimación</th>
+                herramienta<br>
+                de estimación</th>
  
                 <th scope="col">Requisitos<br>
                 de Servicio</th>
@@ -209,7 +209,7 @@
  <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="13">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options} 
