--- a/TableroSLAs/PPMCsCrCalCodDetalle.html
+++ b/TableroSLAs/PPMCsCrCalCodDetalle.html
@@ -39,13 +39,13 @@
       <table width="100%">
         <tr style="BACKGROUND-COLOR: rgb(218,224,228)">
           <td><a href="{lkReqFun_Src}" id="lkReqFun">Cumplimiento de<br>
-            Requisitos Funcionales</a></td> 
+            requisitos funcionales</a></td> 
           <td><a href="{lkCalidad_Src}" id="lkCalidad">Calidad de<br>
-            Productos Terminados</a></td> 
-          <td><a href="{lkRetEnt_Calidad_Src}" id="lkRetEnt_Calidad">Retraso en Entregables</a></td> 
-          <td><a href="{lkCalidadCod_Src}" id="lkCalidadCod">Calidad de Código</a></td> 
-          <td><a href="{Link1_Src}" id="Link1">Defectos Fugados<br>
-            a Producción</a></td>
+            productos terminados</a></td> 
+          <td><a href="{lkRetEnt_Calidad_Src}" id="lkRetEnt_Calidad">Retraso en entregables</a></td> 
+          <td><a href="{lkCalidadCod_Src}" id="lkCalidadCod">Calidad de código</a></td> 
+          <td><a href="{Link1_Src}" id="Link1">Defectos fugados<br>
+            a producción</a></td>
         </tr>
       </table>
     </td>
@@ -62,7 +62,7 @@
               <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Calificar Calidad de Código</strong></td> 
+                  <td class="th"><strong>Calificar calidad de código</strong></td> 
                   <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
               </table>
@@ -79,22 +79,22 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">ID Estimacion</td> 
+                  <td class="th">Id estimación</td> 
                   <td>{ID_Estimacion}</td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_info_rs_CCPctReglas">% Calidad Reglas</label></td> 
+                  <td class="th"><label for="mc_info_rs_CCPctReglas">% Calidad reglas</label></td> 
                   <td><input type="text" id="mc_info_rs_CCPctReglas" maxlength="5" size="5" value="{PctReglas}" name="{PctReglas_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">&nbsp;% Calidad Métricas</td> 
+                  <td class="th">&nbsp;% Calidad métricas</td> 
                   <td><input type="text" id="mc_info_rs_CCPctMetricas" maxlength="5" size="5" value="{PctMetricas}" name="{PctMetricas_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_info_rs_CCCumpleCalidadCod">Cumple Calidad Cod</label></td> 
+                  <td class="th"><label for="mc_info_rs_CCCumpleCalidadCod">Cumple calidad cod</label></td> 
                   <td>
                     <select id="mc_info_rs_CCCumpleCalidadCod" name="{CumpleCalidadCod_Name}">
                       <option selected value="-2">Sin datos para medir</option>
@@ -128,7 +128,7 @@
             <table class="HeaderAustere4" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td class="HeaderLeftAustere4"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td> 
-                <td class="thAustere4"><strong>Metricas </strong></td> 
+                <td class="thAustere4"><strong>Métricas </strong></td> 
                 <td class="HeaderRightAustere4"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td>
               </tr>
             </table>
@@ -141,27 +141,27 @@
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Paquete --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_N_mero_del_Aplicativo --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_N_mero_del_Aplicativo">Número Del Aplicativo</a> 
+                <!-- BEGIN Sorter Sorter_N_mero_del_Aplicativo --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_N_mero_del_Aplicativo">Número del aplicativo</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_N_mero_del_Aplicativo --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Servicio_de_Negocio --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Servicio_de_Negocio">Servicio De Negocio</a> 
+                <!-- BEGIN Sorter Sorter_Servicio_de_Negocio --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Servicio_de_Negocio">Servicio de negocio</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Servicio_de_Negocio --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Tipo_de_requerimiento --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Tipo_de_requerimiento">Tipo De Requerimiento</a> 
+                <!-- BEGIN Sorter Sorter_Tipo_de_requerimiento --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Tipo_de_requerimiento">Tipo de requerimiento</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Tipo_de_requerimiento --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Nombre_del_CDS --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Nombre_del_CDS">Nombre Del CDS</a> 
+                <!-- BEGIN Sorter Sorter_Nombre_del_CDS --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Nombre_del_CDS">Nombre del CDS</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Nombre_del_CDS --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Porcentaje_de_calidad_m_tricas --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Porcentaje_de_calidad_m_tricas">Porcentaje De Calidad Métricas</a> 
+                <!-- BEGIN Sorter Sorter_Porcentaje_de_calidad_m_tricas --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoMetricasSorter_Porcentaje_de_calidad_m_tricas">Porcentaje de calidad métricas</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Porcentaje_de_calidad_m_tricas --></th>
               </tr>
@@ -178,12 +178,12 @@
  <!-- END Row -->
               <!-- BEGIN NoRecords -->
               <tr class="NoRecordsAustere4">
-                <td colspan="6">No hay Registros</td>
+                <td colspan="6">No hay registros</td>
               </tr>
               <!-- END NoRecords -->
               <tr class="FooterAustere4">
                 <td colspan="6">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
@@ -235,27 +235,27 @@
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Paquete --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_N_mero_del_Aplicativo --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_N_mero_del_Aplicativo">Número Del Aplicativo</a> 
+                <!-- BEGIN Sorter Sorter_N_mero_del_Aplicativo --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_N_mero_del_Aplicativo">Número del aplicativo</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_N_mero_del_Aplicativo --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Servicio_de_Negocio --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Servicio_de_Negocio">Servicio De Negocio</a> 
+                <!-- BEGIN Sorter Sorter_Servicio_de_Negocio --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Servicio_de_Negocio">Servicio de negocio</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Servicio_de_Negocio --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Tipo_de_requerimiento --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Tipo_de_requerimiento">Tipo De Requerimiento</a> 
+                <!-- BEGIN Sorter Sorter_Tipo_de_requerimiento --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Tipo_de_requerimiento">Tipo de requerimiento</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Tipo_de_requerimiento --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Nombre_del_CDS --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Nombre_del_CDS">Nombre Del CDS</a> 
+                <!-- BEGIN Sorter Sorter_Nombre_del_CDS --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Nombre_del_CDS">Nombre del CDS</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Nombre_del_CDS --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_Porcentaje_de_Calidad_de_C_digo --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Porcentaje_de_Calidad_de_C_digo">Porcentaje De Calidad De Código</a> 
+                <!-- BEGIN Sorter Sorter_Porcentaje_de_Calidad_de_C_digo --><span class="Sorter"><a href="{Sort_URL}" id="CalidadCodigoReglasSorter_Porcentaje_de_Calidad_de_C_digo">Porcentaje de calidad de código</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/Austere4/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/Austere4/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Porcentaje_de_Calidad_de_C_digo --></th>
               </tr>
@@ -278,7 +278,7 @@
               <!-- END NoRecords -->
               <tr class="FooterAustere4">
                 <td colspan="7">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
