--- a/TableroSLAs/PPMCsCrInfoGeneral.html
+++ b/TableroSLAs/PPMCsCrInfoGeneral.html
@@ -29,13 +29,13 @@
       <table width="100%">
         <tr style="BACKGROUND-COLOR: rgb(218,224,228)">
           <td><a href="{lkReqFun_Src}" id="lkReqFun">Cumplimiento de<br>
-            Requisitos Funcionales</a></td> 
+            requisitos funcionales</a></td> 
           <td><a href="{lkCalidad_Src}" id="lkCalidad">Calidad de<br>
-            Productos Terminados</a></td> 
-          <td><a href="{lkRetEnt_Calidad_Src}" id="lkRetEnt_Calidad">Retraso en Entregables</a></td> 
-          <td><a href="{lkCalidadCodigo_Src}" id="lkCalidadCodigo">Calidad de Código</a></td> 
-          <td><a href="{Link1_Src}" id="Link1">Defectos Fugados<br>
-            a Producción</a></td>
+            productos terminados</a></td> 
+          <td><a href="{lkRetEnt_Calidad_Src}" id="lkRetEnt_Calidad">Retraso en entregables</a></td> 
+          <td><a href="{lkCalidadCodigo_Src}" id="lkCalidadCodigo">Calidad de código</a></td> 
+          <td><a href="{Link1_Src}" id="Link1">Defectos fugados<br>
+            a producción</a></td>
         </tr>
       </table>
     </td> 
@@ -52,7 +52,7 @@
               <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Información General del Requerimiento - {lReportado}</strong></td> 
+                  <td class="th"><strong>Información general del requerimiento - {lReportado}</strong></td> 
                   <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
               </table>
@@ -64,7 +64,7 @@
                 </tr>
                 <!-- END Error -->
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_rs_MCid_ppmc">Id Requerimiento</label></td> 
+                  <td class="th"><label for="mc_calificacion_rs_MCid_ppmc">Id requerimiento</label></td> 
                   <td>{id_ppmc}&nbsp;</td> 
                   <td>&nbsp;</td>
                 </tr>
@@ -76,16 +76,16 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">Estimación Asociada</td> 
+                  <td class="th">Estimación asociada</td> 
                   <td><input type="text" id="mc_calificacion_rs_MCIdEstimacion" size="10" value="{IdEstimacion}" name="{IdEstimacion_Name}"></td> 
                   <td></td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_rs_MCid_servicio_cont">Servicio Contractual</label></td> 
+                  <td class="th"><label for="mc_calificacion_rs_MCid_servicio_cont">Servicio contractual</label></td> 
                   <td>
                     <select id="mc_calificacion_rs_MCid_servicio_cont" name="{id_servicio_cont_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {id_servicio_cont_Options}
                     </select>
  </td> 
@@ -93,10 +93,10 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_rs_MCid_servicio_negocio">Servicio de Negocio</label></td> 
+                  <td class="th"><label for="mc_calificacion_rs_MCid_servicio_negocio">Servicio de negocio</label></td> 
                   <td>
                     <select id="mc_calificacion_rs_MCid_servicio_negocio" name="{id_servicio_negocio_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {id_servicio_negocio_Options}
                     </select>
  </td> 
@@ -104,10 +104,10 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_rs_MCid_tipo">Tipo de Requerimiento</label></td> 
+                  <td class="th"><label for="mc_calificacion_rs_MCid_tipo">Tipo de requerimiento</label></td> 
                   <td>
                     <select id="mc_calificacion_rs_MCid_tipo" name="{id_tipo_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {id_tipo_Options}
                     </select>
  </td> 
@@ -121,19 +121,19 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_rs_MCObs_manuales">Observaciones Generales</label></td> 
+                  <td class="th"><label for="mc_calificacion_rs_MCObs_manuales">Observaciones generales</label></td> 
                   <td><textarea id="mc_calificacion_rs_MCObs_manuales" rows="3" cols="55" name="{Obs_manuales_Name}">{Obs_manuales}</textarea></td> 
                   <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_rs_MCppmc_adicional">Requerimiento Padre</label></td> 
+                  <td class="th"><label for="mc_calificacion_rs_MCppmc_adicional">Requerimiento padre</label></td> 
                   <td><input type="text" id="mc_calificacion_rs_MCppmc_adicional" maxlength="6" value="{ppmc_adicional}" name="{ppmc_adicional_Name}" size="20"></td> 
                   <td>&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_calificacion_rs_MCUrlEvidencia">Url Evidencia</label></td> 
+                  <td class="th"><label for="mc_calificacion_rs_MCUrlEvidencia">Url evidencia</label></td> 
                   <td><textarea id="mc_calificacion_rs_MCUrlEvidencia" rows="3" cols="50" name="{UrlEvidencia_Name}">{UrlEvidencia}</textarea></td> 
                   <td>&nbsp;</td>
                 </tr>
