--- a/TableroSLAs/PPMCsCrbCalidadCAPC.html
+++ b/TableroSLAs/PPMCsCrbCalidadCAPC.html
@@ -23,8 +23,8 @@
 <table width="100%">
   <tr style="BACKGROUND-COLOR: rgb(218,224,228)">
     <td><a href="{lkCumplimiento_Src}" id="lkCumplimiento">Cumplimiento en<br>
-      Requisitos Funcionales</a></td> 
-    <td><a href="{lkCalidad_Src}" id="lkCalidad">Deductivas por Omisión</a></td> 
+      Requisitos funcionales</a></td> 
+    <td><a href="{lkCalidad_Src}" id="lkCalidad">Deductivas por omisión</a></td> 
     <td><a href="{lkRetraso_Src}" id="lkRetraso">Retraso en entregables</a></td>
   </tr>
 </table>
@@ -41,7 +41,7 @@
               <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Calificar Calidad de Productos Terminados (CAPC)</strong>{lReportado}</td> 
+                  <td class="th"><strong>Calificar calidad de productos terminados (CAPC)</strong>{lReportado}</td> 
                   <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
               </table>
@@ -65,13 +65,13 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">Servicio de Negocio&nbsp;</td> 
+                  <td class="th">Servicio de negocio&nbsp;</td> 
                   <td colspan="2"><input type="hidden" id="mc_info_rs_cr_calidad_capc_capclsServNegocio" value="{lsServNegocio}" name="{lsServNegocio_Name}">{lbServNegocio} </td> 
                   <td class="th">&nbsp;</td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">Servicio Contractual</td> 
+                  <td class="th">Servicio contractual</td> 
                   <td colspan="2"><input type="hidden" id="mc_info_rs_cr_calidad_capc_capclsServContractual" value="{lsServContractual}" name="{lsServContractual_Name}">{lbServContractual} </td> 
                   <td class="th">&nbsp;</td>
                 </tr>
@@ -87,9 +87,9 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcRechazosDocAVL">&nbsp;Errores Ortográficos</label></td> 
+                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcRechazosDocAVL">&nbsp;Errores ortográficos</label></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidad_capchallazgo_errores_ort" style="display: none;">&nbsp;</label><input type="text" id="mc_info_rs_cr_calidad_capchallazgo_errores_ort" value="{hallazgo_errores_ort}" name="{hallazgo_errores_ort_Name}"></td> 
-                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcRechazosFunAVL">&nbsp;Errores Ortográficos</label></td> 
+                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcRechazosFunAVL">&nbsp;Errores ortográficos</label></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidad_capcdefectos_errores_ort" style="display: none;">&nbsp;</label><input type="text" id="mc_info_rs_cr_calidad_capcdefectos_errores_ort" value="{defectos_errores_ort}" name="{defectos_errores_ort_Name}"></td>
                 </tr>
  
@@ -115,7 +115,7 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">&nbsp;Documentación Incorrecta</td> 
+                  <td class="th">&nbsp;Documentación incorrecta</td> 
                   <td class="th">&nbsp;<input type="text" id="mc_info_rs_cr_calidad_capchallazgo_doc_incorrecta" value="{hallazgo_doc_incorrecta}" name="{hallazgo_doc_incorrecta_Name}"></td> 
                   <td class="th">&nbsp;Documentación incorrecta</td> 
                   <td class="th">&nbsp;<input type="text" id="mc_info_rs_cr_calidad_capcdefectos_doc_incorrecta" value="{defectos_doc_incorrecta}" name="{defectos_doc_incorrecta_Name}"></td>
@@ -129,21 +129,21 @@
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcIndiceCalidadDoc">Indice Calidad Documental</label></td> 
+                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcIndiceCalidadDoc">Indice calidad documental</label></td> 
                   <td class="th"><input type="text" id="mc_info_rs_cr_calidad_capc_capcIndiceCalidadDoc" value="{IndiceCalidadDoc}" maxlength="3" size="3" name="{IndiceCalidadDoc_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcTotalDefectos"><label for="mc_info_rs_cr_calidad_capc_capcIndiceCalidadFun">&nbsp;</label></label></td> 
                   <td class="th"></td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcDeductivaDoc">Deductiva Documental</label></td> 
+                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcDeductivaDoc">Deductiva documental</label></td> 
                   <td class="th"><input type="text" id="mc_info_rs_cr_calidad_capc_capcDeductivaDoc" value="{DeductivaDoc}" maxlength="3" size="3" name="{DeductivaDoc_Name}"></td> 
                   <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcTotalDefectos"><font style="BACKGROUND-COLOR: rgb(232,232,232)"><label for="mc_info_rs_cr_calidad_capc_capcDeductivaFun">&nbsp;</label></font></label></td> 
                   <td class="th"></td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcCumpleCalidad">Cumple Calidad</label></td> 
+                  <td class="th"><label for="mc_info_rs_cr_calidad_capc_capcCumpleCalidad">Cumple calidad</label></td> 
                   <td colspan="3">
                     <select id="mc_info_rs_cr_calidad_capc_capcCumpleCalidad" name="{CumpleCalidad_Name}">
                       <option selected value="">No Aplica</option>
