--- a/TableroSLAs/PPMCsCrbLista.html
+++ b/TableroSLAs/PPMCsCrbLista.html
@@ -57,11 +57,11 @@
                         <td class="th"><label for="Grid2s_id_proveedor">Proveedor</label></td> 
                         <td>
                           <select id="Grid2s_id_proveedor" name="{s_id_proveedor_Name}">
-                            <option selected value="">Seleccionar Valor</option>
+                            <option selected value="">Seleccionar valor</option>
  {s_id_proveedor_Options} 
                           </select>
  </td> 
-                        <td class="th"><label for="Grid2s_numero">Numero</label></td> 
+                        <td class="th"><label for="Grid2s_numero">Número</label></td> 
                         <td><input type="text" id="Grid2s_numero" maxlength="25" size="25" value="{s_numero}" name="{s_numero_Name}"></td> 
                         <td class="th"><label for="Grid2s_mesparam">Mes</label></td> 
                         <td>
@@ -73,14 +73,14 @@
                         <td class="th"><label for="Grid2s_anioparam">Año</label></td> 
                         <td>
                           <select id="Grid2s_anioparam" name="{s_anioparam_Name}">
-                            <option selected value="">Seleccionar Valor</option>
+                            <option selected value="">Seleccionar valor</option>
  {s_anioparam_Options} 
                           </select>
  </td> 
                         <td>Analista&nbsp;</td> 
                         <td>
                           <select id="Grid2sAnalista" name="{sAnalista_Name}">
-                            <option selected value="">Seleccionar Valor</option>
+                            <option selected value="">Seleccionar valor</option>
  {sAnalista_Options} 
                           </select>
  </td> 
@@ -122,7 +122,7 @@
             <table class="Header" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                <td class="th"><strong>Requerimientos de&nbsp;Cierre </strong></td> 
+                <td class="th"><strong>Requerimientos de&nbsp;cierre </strong></td> 
                 <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
               </tr>
  
@@ -143,14 +143,14 @@
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter1 --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_SERVICIO_NEGOCIO --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter_SERVICIO_NEGOCIO">Servicio de Negocio</a> 
+                <!-- BEGIN Sorter Sorter_SERVICIO_NEGOCIO --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter_SERVICIO_NEGOCIO">Servicio de negocio</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_SERVICIO_NEGOCIO --></th>
  
-                <th scope="col">&nbsp;Fecha Firma CAES&nbsp;</th>
+                <th scope="col">&nbsp;Fecha firma CAES&nbsp;</th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter2 --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter2">Tipo Requerimiento</a> 
+                <!-- BEGIN Sorter Sorter2 --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter2">Tipo requerimiento</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter2 --></th>
  
@@ -165,21 +165,21 @@
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_nombre --></th>
  
                 <th scope="col">Cumplimiento en<br>
-                Requisitos<br>
-                Funcionales</th>
+                requisitos<br>
+                funcionales</th>
  
                 <th scope="col">Calidad de<br>
-                Productos<br>
-                Terminados</th>
+                productos<br>
+                terminados</th>
  
                 <th scope="col">Retraso en<br>
-                Entregables</th>
+                entregables</th>
  
                 <th scope="col">Calidad<br>
-                de Código</th>
+                de código</th>
  
                 <th scope="col">Defectos<br>
-                Fugados&nbsp;</th>
+                fugados&nbsp;</th>
  
                 <th scope="col">
                 <!-- BEGIN Sorter Sorter4 --><span class="Sorter"><a href="{Sort_URL}" id="Grid1Sorter4">Analista</a> 
@@ -223,7 +223,7 @@
  <!-- END NoRecords -->
               <tr class="Footer">
                 <td colspan="14">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options} 
