--- a/TableroSLAs/PPMCsCumpReqFunDetalle.html
+++ b/TableroSLAs/PPMCsCumpReqFunDetalle.html
@@ -272,13 +272,13 @@ jQuery(function ($) {
 <table width="100%">
   <tr style="BACKGROUND-COLOR: rgb(218,224,228)">
     <td><a href="{lkReqFun_Src}" id="lkReqFun">Cumplimiento de<br>
-      Requisitos Funcionales</a></td> 
+      requisitos funcionales</a></td> 
     <td><a href="{lkCalidad_Src}" id="lkCalidad">Calidad de<br>
-      Productos Terminados</a></td> 
-    <td><a href="{lkRetEnt_Calidad_Src}" id="lkRetEnt_Calidad">Retraso en Entregables</a></td> 
-    <td><a href="{lkCalidadCod_Src}" id="lkCalidadCod">Calidad de Código</a></td> 
-    <td><a href="{Link1_Src}" id="Link1">Defectos Fugados<br>
-      a Producción</a></td>
+      productos terminados</a></td> 
+    <td><a href="{lkRetEnt_Calidad_Src}" id="lkRetEnt_Calidad">Retraso en entregables</a></td> 
+    <td><a href="{lkCalidadCod_Src}" id="lkCalidadCod">Calidad de código</a></td> 
+    <td><a href="{Link1_Src}" id="Link1">Defectos fugados<br>
+      a producción</a></td>
   </tr>
 </table>
 <p></p>
@@ -292,7 +292,7 @@ jQuery(function ($) {
         <table class="Header" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-            <td class="th"><strong>Cumplimiento de Requisitos Funcionales</strong>{lReportado}</td> 
+            <td class="th"><strong>Cumplimiento de requisitos funcionales</strong>{lReportado}</td> 
             <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
           </tr>
         </table>
@@ -327,24 +327,24 @@ jQuery(function ($) {
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFPuntuacion">Puntuacion Total</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFPuntuacion">Puntuacion total</label></td> 
             <td><input type="text" id="mc_info_rs_cr_RFPuntuacion" maxlength="8" size="8" value="{Puntuacion}" name="{Puntuacion_Name}"></td>
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFURLRepositorio">URL Repositorio</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFURLRepositorio">URL repositorio</label></td> 
             <td><input type="text" id="mc_info_rs_cr_RFURLRepositorio" maxlength="700" size="75" value="{URLRepositorio}" name="{URLRepositorio_Name}"></td>
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFFechaSubida">Fecha de Liberación</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFFechaSubida">Fecha de liberación</label></td> 
             <td><input type="text" onblur="muestraCheck()" id="mc_info_rs_cr_RFFechaSubida" maxlength="100" size="10" value="{FechaSubida}" name="{FechaSubida_Name}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
               <div id="ListaPDF">
-                <label for="mc_info_rs_cr_RFListaenPDF" style="display: inline;">Lista de Requisitos en PDF </label><input type="checkbox" id="mc_info_rs_cr_RFListaenPDF" value="1" name="{ListaenPDF_Name}" {ListaenPDF}>
+                <label for="mc_info_rs_cr_RFListaenPDF" style="display: inline;">Lista de requisitos en PDF </label><input type="checkbox" id="mc_info_rs_cr_RFListaenPDF" value="1" name="{ListaenPDF_Name}" {ListaenPDF}>
               </div>
  
               <div id="ListaCAES">
-                <label for="mc_info_rs_cr_RFListaenCAES" style="display: inline;">Lista de Requisitos en CAES</label><input type="checkbox" id="mc_info_rs_cr_RFListaenCAES" value="1" name="{ListaenCAES_Name}" {ListaenCAES}>
+                <label for="mc_info_rs_cr_RFListaenCAES" style="display: inline;">Lista de requisitos en CAES</label><input type="checkbox" id="mc_info_rs_cr_RFListaenCAES" value="1" name="{ListaenCAES_Name}" {ListaenCAES}>
               </div>
             </td>
           </tr>
@@ -355,8 +355,8 @@ jQuery(function ($) {
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFCumpleReqFun">Cumple Requisitos<br>
-              Funcionales</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFCumpleReqFun">Cumple requisitos<br>
+              funcionales</label></td> 
             <td>
               <select id="mc_info_rs_cr_RFCumpleReqFun" name="{CumpleReqFun_Name}">
                 <option selected value="">No Aplica</option>
