--- a/TableroSLAs/SLAsCAPCLista.html
+++ b/TableroSLAs/SLAsCAPCLista.html
@@ -64,21 +64,21 @@
                   <td class="th"><label for="mc_calificacion_capcs_mes">Mes</label></td> 
                   <td>
                     <select id="mc_calificacion_capcs_mes" name="{s_mes_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_mes_Options}
                     </select>
  </td> 
                   <td class="th"><label for="mc_calificacion_capcs_anio">Año</label></td> 
                   <td>
                     <select id="mc_calificacion_capcs_anio" name="{s_anio_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_anio_Options}
                     </select>
  </td> 
                   <td class="th"><label for="mc_calificacion_capcs_id_serviciocont">Servicio</label></td> 
                   <td>
                     <select id="mc_calificacion_capcs_id_serviciocont" name="{s_id_serviciocont_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_id_serviciocont_Options}
                     </select>
  </td>
@@ -103,7 +103,7 @@
     </td> 
     <td>
       <div style="TEXT-ALIGN: center">
-<a href="{lkTableroExcelCAPC_Src}" id="lkTableroExcelCAPC"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; VERTICAL-ALIGN: middle; BORDER-LEFT-WIDTH: 0px; border-image: none" alt="{lkReporteExcel}" src="images/xls.jpg" width="20" height="20">&nbsp;Tablero Excel CAPC</a> 
+		<a href="{lkTableroExcelCAPC_Src}" id="lkTableroExcelCAPC"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; VERTICAL-ALIGN: middle; BORDER-LEFT-WIDTH: 0px; border-image: none" alt="{lkReporteExcel}" src="images/xls.jpg" width="20" height="20">&nbsp;Tablero excel CAPC</a> 
       </div>
     </td>
   </tr>
@@ -125,7 +125,7 @@
             <table class="Grid" cellspacing="0" cellpadding="0">
               <tr class="Caption">
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_mc_c_ServContractual_Descripcion --><span class="Sorter"><a href="{Sort_URL}" id="mc_c_ServContractual_mc_cSorter_mc_c_ServContractual_Descripcion">Servicio de Negocio</a> 
+                <!-- BEGIN Sorter Sorter_mc_c_ServContractual_Descripcion --><span class="Sorter"><a href="{Sort_URL}" id="mc_c_ServContractual_mc_cSorter_mc_c_ServContractual_Descripcion">Servicio de negocio</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_mc_c_ServContractual_Descripcion --></th>
  
@@ -151,24 +151,24 @@
                 tiempos</th>
  
                 <th scope="col">Requisitos de<br>
-                Servicio</th>
+                servicio</th>
  
                 <th scope="col">Cumplimiento<br>
-                en Requisitos<br>
-                Funcionales</th>
+                en requisitos<br>
+                funcionales</th>
  
                 <th scope="col">
                 <!-- BEGIN Sorter Sorter_CALIDAD_PROD_TERM --><span class="Sorter"><a href="{Sort_URL}" id="mc_c_ServContractual_mc_cSorter_CALIDAD_PROD_TERM">Calidad de<br>
                 Productos<br>
-                Terminados<br>
+                terminados<br>
                 (Por entregable<br>
-                de cada Servicio)</a> 
+                de cada servicio)</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_CALIDAD_PROD_TERM --></th>
  
                 <th scope="col">
                 <!-- BEGIN Sorter Sorter_DEDUC_OMISION --><span class="Sorter"><a href="{Sort_URL}" id="mc_c_ServContractual_mc_cSorter_DEDUC_OMISION">Deductivas<br>
-                por Omisión</a> 
+                por omisión</a> 
                 <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_DEDUC_OMISION --></th>
  
@@ -219,7 +219,7 @@
               <tr class="Footer">
                 <td>&nbsp;<a href="{Link1_Src}" id="mc_c_ServContractual_mc_cLink1_{mc_c_ServContractual_mc_c:rowNumber}">Agregar Medición</a></td> 
                 <td colspan="10">
-                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registro por página 
+                  <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
                   <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
                     <option selected value="">-</option>
  {PageSize_Options}
