--- a/TableroSLAs/SLAsCAPCReqFunDetalle.html
+++ b/TableroSLAs/SLAsCAPCReqFunDetalle.html
@@ -277,8 +277,8 @@ jQuery(function ($) {
 <table width="100%">
   <tr style="BACKGROUND-COLOR: rgb(218,224,228)">
     <td><a href="{lkCalidad_Src}" id="lkCalidad">Calidad de<br>
-      Productos Terminados</a></td> 
-    <td><a href="{lkDeductiva_Src}" id="lkDeductiva">Deductivas por Omisión</a></td> 
+      productos terminados</a></td> 
+    <td><a href="{lkDeductiva_Src}" id="lkDeductiva">Deductivas por omisión</a></td> 
     <td><a href="{lkRetraso_Src}" id="lkRetraso">Retraso en entregables</a></td>
   </tr>
 </table>
@@ -294,7 +294,7 @@ jQuery(function ($) {
         <table class="Header" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-            <td class="th"><strong>Cumplimiento de Requisitos Funcionales</strong>{lReportado}</td> 
+            <td class="th"><strong>Cumplimiento de requisitos funcionales</strong>{lReportado}</td> 
             <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
           </tr>
         </table>
@@ -307,7 +307,7 @@ jQuery(function ($) {
           <!-- END Error -->
           <tr class="Controls">
             <td class="th">&nbsp;Id PPMC</td> 
-            <td>{sId_PPMC}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Id Estimación&nbsp;{sID_Estimacion} <input type="hidden" id="mc_info_rs_cr_RFhdMes" value="{hdMes}" name="{hdMes_Name}"><input type="hidden" id="mc_info_rs_cr_RFhdAnio" value="{hdAnio}" name="{hdAnio_Name}"></td>
+            <td>{sId_PPMC}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Id estimación&nbsp;{sID_Estimacion} <input type="hidden" id="mc_info_rs_cr_RFhdMes" value="{hdMes}" name="{hdMes_Name}"><input type="hidden" id="mc_info_rs_cr_RFhdAnio" value="{hdAnio}" name="{hdAnio_Name}"></td>
           </tr>
  
           <tr class="Controls">
@@ -329,24 +329,24 @@ jQuery(function ($) {
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFPuntuacion">Puntuacion Total</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFPuntuacion">Puntuacion total</label></td> 
             <td><input type="text" id="mc_info_rs_cr_RFPuntuacion" value="{Puntuacion}" maxlength="8" size="8" name="{Puntuacion_Name}"></td>
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFURLRepositorio">URL Repositorio</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFURLRepositorio">URL repositorio</label></td> 
             <td><input type="text" id="mc_info_rs_cr_RFURLRepositorio" value="{URLRepositorio}" maxlength="700" size="75" name="{URLRepositorio_Name}"></td>
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFFechaSubida">Fecha de Liberación</label></td> 
+            <td class="th"><label for="mc_info_rs_cr_RFFechaSubida">Fecha de liberación</label></td> 
             <td><input type="text" onblur="muestraCheck()" id="mc_info_rs_cr_RFFechaSubida" value="{FechaSubida}" maxlength="100" size="10" name="{FechaSubida_Name}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
               <div id="ListaPDF">
-                <label style="display: inline;" for="mc_info_rs_cr_RFListaenPDF">Lista de Requisitos en PDF </label><input type="checkbox" id="mc_info_rs_cr_RFListaenPDF" value="1" name="{ListaenPDF_Name}" {ListaenPDF}>
+                <label style="display: inline;" for="mc_info_rs_cr_RFListaenPDF">Lista de requisitos en PDF </label><input type="checkbox" id="mc_info_rs_cr_RFListaenPDF" value="1" name="{ListaenPDF_Name}" {ListaenPDF}>
               </div>
  
               <div id="ListaCAES">
-                <label style="display: inline;" for="mc_info_rs_cr_RFListaenCAES">Lista de Requisitos en CAES</label><input type="checkbox" id="mc_info_rs_cr_RFListaenCAES" value="1" name="{ListaenCAES_Name}" {ListaenCAES}>
+                <label style="display: inline;" for="mc_info_rs_cr_RFListaenCAES">Lista de requisitos en CAES</label><input type="checkbox" id="mc_info_rs_cr_RFListaenCAES" value="1" name="{ListaenCAES_Name}" {ListaenCAES}>
               </div>
             </td>
           </tr>
@@ -357,7 +357,7 @@ jQuery(function ($) {
           </tr>
  
           <tr class="Controls">
-            <td class="th"><label for="mc_info_rs_cr_RFCumpleReqFun">Cumple Requisitos<br>
+            <td class="th"><label for="mc_info_rs_cr_RFCumpleReqFun">Cumple requisitos<br>
               Funcionales</label></td> 
             <td>
               <select id="mc_info_rs_cr_RFCumpleReqFun" name="{CumpleReqFun_Name}">
