--- a/TableroSLAs/TableroExcel.html
+++ b/TableroSLAs/TableroExcel.html
@@ -93,7 +93,7 @@ jQuery(function ($) {
               <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Buscar Reporte</strong></td> 
+                  <td class="th"><strong>Buscar reporte</strong></td> 
                   <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
               </table>
@@ -108,7 +108,7 @@ jQuery(function ($) {
                   <td class="th"><label for="mc_reporte_ns1s_id_proveedor">Proveedor</label></td> 
                   <td>
                     <select id="mc_reporte_ns1s_id_proveedor" name="{s_id_proveedor_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_id_proveedor_Options}
                     </select>
  </td> 
@@ -163,7 +163,7 @@ jQuery(function ($) {
               <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Caratula del Informe</strong></td> 
+                  <td class="th"><strong>Caratula del informe</strong></td> 
                   <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
               </table>
@@ -175,24 +175,24 @@ jQuery(function ($) {
                 </tr>
                 <!-- END Error -->
                 <tr class="Controls">
-                  <td class="th">&nbsp;Mes de Reporte: </td> 
+                  <td class="th">&nbsp;Mes de reporte: </td> 
                   <td>
                     <select id="Panel1mc_reporte_nss_MesReporte" name="{s_MesReporte_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_MesReporte_Options}
                     </select>
  &nbsp; </td> 
                   <td>Año:&nbsp;</td> 
                   <td>
                     <select id="Panel1mc_reporte_nss_AnioReporte" name="{s_AnioReporte_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_AnioReporte_Options}
                     </select>
  &nbsp; </td> 
                   <td>Proveedor:&nbsp;</td> 
                   <td>
                     <select id="Panel1mc_reporte_nss_id_proveedor" name="{s_id_proveedor_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_id_proveedor_Options}
                     </select>
  &nbsp; </td>
@@ -204,7 +204,7 @@ jQuery(function ($) {
                   <td>&nbsp;Responsable</td> 
                   <td>
                     <select id="Panel1mc_reporte_nsResponsable" name="{Responsable_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {Responsable_Options}
                     </select>
  </td> 
