--- a/TableroSLAs/UniversoLista.html
+++ b/TableroSLAs/UniversoLista.html
@@ -43,15 +43,15 @@ jQuery(function ($) {
 </head>
 <body>
 {Header}&nbsp; <strong></strong><strong></strong><strong></strong>
-<table width="100%" border="0">
+<table border="0" width="100%">
   <tr>
     <td colspan="2">
       <!-- BEGIN Record grdFiltra -->
       <form id="grdFiltra" method="post" name="{HTMLFormName}" action="{Action}">
-        <table cellspacing="0" cellpadding="0" border="0">
+        <table border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td valign="top">
-              <table class="Header" cellspacing="0" cellpadding="0" border="0">
+              <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img border="0" alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Filtrar</strong></td> 
@@ -66,12 +66,12 @@ jQuery(function ($) {
                 </tr>
                 <!-- END Error -->
                 <tr class="Controls">
-                  <td class="th">Numero&nbsp;</td> 
+                  <td class="th">Número&nbsp;</td> 
                   <td class="th"><input type="text" id="grdFiltras_Numero" value="{s_Numero}" name="{s_Numero_Name}"></td> 
                   <td class="th"><label for="grdFiltras_id_proveedor">Proveedor</label></td> 
                   <td>
                     <select id="grdFiltras_id_proveedor" name="{s_id_proveedor_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_id_proveedor_Options}
                     </select>
  </td> 
@@ -85,23 +85,23 @@ jQuery(function ($) {
                   <td class="th"><label for="grdFiltras_anio">Año</label></td> 
                   <td>
                     <select id="grdFiltras_anio" name="{s_anio_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_anio_Options}
                     </select>
  </td> 
                   <td class="th"><label for="grdFiltras_tipo">Tipo</label></td> 
                   <td>
                     <select id="grdFiltras_tipo" name="{s_tipo_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {s_tipo_Options}
                     </select>
  </td> 
-                  <td class="th">&nbsp;<label for="grdFiltrasPendientes" style="display: inline;">Pendientes de Reportar</label><input type="checkbox" id="grdFiltrasPendientes" value="1" name="{sPendientes_Name}" {sPendientes}></td>
+                  <td class="th">&nbsp;<label for="grdFiltrasPendientes" style="display: inline;">Pendientes de reportar</label><input type="checkbox" id="grdFiltrasPendientes" value="1" name="{sPendientes_Name}" {sPendientes}></td>
                 </tr>
  
                 <tr class="Bottom">
                   <td colspan="11" align="right">
-                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="grdFiltraButton_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="grdFiltraButton_DoSearch" class="Button" value="Buscar" alt="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
                 </tr>
               </table>
             </td>
@@ -115,14 +115,14 @@ jQuery(function ($) {
   <tr>
     <td colspan="2"><strong></strong><strong></strong><strong></strong><strong></strong>
       <!-- BEGIN Panel Panel2 -->
-      <table class="Header" cellspacing="0" cellpadding="0" width="50%" border="0">
+      <table class="Header" border="0" cellspacing="0" cellpadding="0" width="50%">
         <tr>
-          <td class="th" style="WIDTH: 300px"><a href="{Link3_Src}" id="Panel2Link3">Incidentes Relacionados</a></td> 
-          <td class="th" style="WIDTH: 300px">
-            <!-- BEGIN Link lkCargaMultiple --><a href="{lkCargaMultiple_Src}" id="Panel2lkCargaMultiple">Cargar Multiples Claves</a><!-- END Link lkCargaMultiple --></td> 
-          <td class="th" style="WIDTH: 300px">&nbsp; 
-            <!-- BEGIN Link Link1 --><a href="{Link1_Src}" id="Panel2Link1">Calcular Universo</a><!-- END Link Link1 --></td> 
-          <td class="th" style="WIDTH: 300px"><a href="{Link2_Src}" id="Panel2Link2">Distribuir Universo</a></td>
+          <td style="WIDTH: 300px" class="th"><a href="{Link3_Src}" id="Panel2Link3">Incidentes relacionados</a></td> 
+          <td style="WIDTH: 300px" class="th">
+            <!-- BEGIN Link lkCargaMultiple --><a href="{lkCargaMultiple_Src}" id="Panel2lkCargaMultiple">Cargar multiples claves</a><!-- END Link lkCargaMultiple --></td> 
+          <td style="WIDTH: 300px" class="th">&nbsp; 
+            <!-- BEGIN Link Link1 --><a href="{Link1_Src}" id="Panel2Link1">Calcular universo</a><!-- END Link Link1 --></td> 
+          <td style="WIDTH: 300px" class="th"><a href="{Link2_Src}" id="Panel2Link2">Distribuir universo</a></td>
         </tr>
       </table>
       <!-- END Panel Panel2 --><strong></strong></td>
@@ -131,13 +131,13 @@ jQuery(function ($) {
   <tr style="VERTICAL-ALIGN: top">
     <td width="40%"><strong></strong>
       <!-- BEGIN Grid grdUniverso -->
-      <table cellspacing="0" cellpadding="0" border="0">
+      <table border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td valign="top">
-            <table class="Header" cellspacing="0" cellpadding="0" border="0">
+            <table class="Header" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td class="HeaderLeft"><img border="0" alt="" src="data:image/png;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></td> 
-                <td class="th"><strong>Universo de Medición</strong></td> 
+                <td class="th"><strong>Universo de medición</strong></td> 
                 <td class="HeaderRight"><img border="0" alt="" src="data:image/png;base64,R0lGODlhAQABAIAAAAAAAAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></td>
               </tr>
             </table>
@@ -150,7 +150,7 @@ jQuery(function ($) {
                 <!-- BEGIN Desc_On --><img border="0" alt="Descendente" src="data:image/png;base64,R0lGODlhCwAHAIAAAK2+wil4kyH5BAEAAAAALAAAAAALAAcAAAIOjI+pAWsAF5xp2mMzswUAOw=="><!-- END Desc_On --><!-- END Sorter Sorter_tipo --></th>
  
                 <th scope="col">
-                <!-- BEGIN Sorter Sorter_numero --><a href="{Sort_URL}" id="grdUniversoSorter_numero">Numero</a> 
+                <!-- BEGIN Sorter Sorter_numero --><a href="{Sort_URL}" id="grdUniversoSorter_numero">Número</a> 
                 <!-- BEGIN Asc_On --><img border="0" alt="Ascendente" src="data:image/png;base64,R0lGODlhCwAHAIABACl4k62+wiH5BAEAAAEALAAAAAALAAcAAAIPjA2nCLnR4or00Auv3rEAADs="><!-- END Asc_On -->
                 <!-- BEGIN Desc_On --><img border="0" alt="Descendente" src="data:image/png;base64,R0lGODlhCwAHAIAAAK2+wil4kyH5BAEAAAAALAAAAAALAAcAAAIOjI+pAWsAF5xp2mMzswUAOw=="><!-- END Desc_On --><!-- END Sorter Sorter_numero --></th>
  
@@ -194,7 +194,7 @@ jQuery(function ($) {
               <tr class="Footer">
                 <td colspan="7">
                   <!-- BEGIN Navigator Navigator -->
-                  <!-- BEGIN Page_Parameter --><input type="hidden" value="{Value}" name="{Name}"><!-- END Page_Parameter -->Per page: 
+                  <!-- BEGIN Page_Parameter --><input type="hidden" value="{Value}" name="{Name}"><!-- END Page_Parameter -->Registros por página: 
                   <select onchange="CCChangeSize(this, '{FormName}')" name="{FormName}PageSize">
                     <option selected value="">-</option>
  {PageSize_Options}
@@ -221,10 +221,10 @@ jQuery(function ($) {
       <!-- BEGIN Panel Panel1 -->
       <!-- BEGIN Record universo_cds -->
       <form id="Panel1universo_cds" method="post" name="{HTMLFormName}" action="{Action}">
-        <table cellspacing="0" cellpadding="0" border="0">
+        <table border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td valign="top">
-              <table class="Header" cellspacing="0" cellpadding="0" border="0">
+              <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img border="0" alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Agregar/Editar </strong></td> 
@@ -242,7 +242,7 @@ jQuery(function ($) {
                   <td class="th"><label for="Panel1universo_cdsid_proveedor">Id Proveedor</label></td> 
                   <td>
                     <select id="Panel1universo_cdsid_proveedor" name="{id_proveedor_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {id_proveedor_Options}
                     </select>
  </td>
@@ -250,14 +250,14 @@ jQuery(function ($) {
  
                 <tr class="Controls">
                   <td class="th"><label for="Panel1universo_cdsnumero">Número</label></td> 
-                  <td><input type="text" id="Panel1universo_cdsnumero" maxlength="25" size="25" value="{numero}" name="{numero_Name}"></td>
+                  <td><input type="text" id="Panel1universo_cdsnumero" value="{numero}" maxlength="25" size="25" name="{numero_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
                   <td class="th"><label for="Panel1universo_cdstipo">Tipo</label></td> 
                   <td>
                     <select id="Panel1universo_cdstipo" name="{tipo_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {tipo_Options}
                     </select>
  </td>
@@ -267,7 +267,7 @@ jQuery(function ($) {
                   <td class="th"><label for="Panel1universo_cdsmes">Mes</label></td> 
                   <td>
                     <select id="Panel1universo_cdsmes" name="{mes_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {mes_Options}
                     </select>
  </td>
@@ -277,14 +277,14 @@ jQuery(function ($) {
                   <td class="th"><label for="Panel1universo_cdsanio">Año</label></td> 
                   <td>
                     <select id="Panel1universo_cdsanio" name="{anio_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {anio_Options}
                     </select>
  </td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th">Id Estimación</td> 
+                  <td class="th">Id estimación</td> 
                   <td><label for="Panel1universo_cdsIdEstimacion" style="display: none;">TextBox1</label><input type="text" id="Panel1universo_cdsIdEstimacion" value="{IdEstimacion}" name="{IdEstimacion_Name}"></td>
                 </tr>
  
@@ -293,7 +293,7 @@ jQuery(function ($) {
                 </tr>
  
                 <tr class="Controls">
-                  <td colspan="2"><input type="checkbox" id="Panel1universo_cdschkDescartar" value="1" name="{chkDescartar_Name}" {chkDescartar}>&nbsp;No considerar en el Universo</td>
+                  <td colspan="2"><input type="checkbox" id="Panel1universo_cdschkDescartar" value="1" name="{chkDescartar_Name}" {chkDescartar}>&nbsp;No considerar en el universo</td>
                 </tr>
  
                 <tr class="Controls">
@@ -301,14 +301,14 @@ jQuery(function ($) {
                 </tr>
  
                 <tr class="Controls">
-                  <td colspan="2">&nbsp;<label for="Panel1universo_cdschkEsReqTeq" style="display: inline;">Es Requerimiento Técnico</label><input type="checkbox" id="Panel1universo_cdschkEsReqTeq" value="1" name="{chkEsReqTeq_Name}" {chkEsReqTeq}></td>
+                  <td colspan="2">&nbsp;<label for="Panel1universo_cdschkEsReqTeq" style="display: inline;">Es requerimiento técnico</label><input type="checkbox" id="Panel1universo_cdschkEsReqTeq" value="1" name="{chkEsReqTeq_Name}" {chkEsReqTeq}></td>
                 </tr>
  
                 <tr class="Controls">
-                  <td>&nbsp;Req. Técnico Relacionado</td> 
+                  <td>&nbsp;Req. técnico relacionado</td> 
                   <td><label for="Panel1universo_cdsReqTecnico" style="display: none;">ListBox1</label> 
                     <select id="Panel1universo_cdsReqTecnico" name="{ReqTecnico_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {ReqTecnico_Options}
                     </select>
  </td>
@@ -316,7 +316,7 @@ jQuery(function ($) {
  
                 <tr class="Controls">
                   <td class="th">Comentario</td> 
-                  <td><input type="text" id="Panel1universo_cdsnotas_manual" maxlength="125" size="75" value="{notas_manual}" name="{notas_manual_Name}"></td>
+                  <td><input type="text" id="Panel1universo_cdsnotas_manual" value="{notas_manual}" maxlength="125" size="75" name="{notas_manual_Name}"></td>
                 </tr>
  
                 <tr class="Controls">
@@ -327,9 +327,9 @@ jQuery(function ($) {
                 <tr class="Bottom">
                   <td style="BORDER-RIGHT: medium none"><a href="{Link1_Src}" id="Panel1universo_cdsLink1">Limpiar Campos</a></td> 
                   <td align="right">
-                    <!-- BEGIN Button Button_Insert --><input type="submit" id="Panel1universo_cdsButton_Insert" class="Button" alt="Agregar" value="Insertar" name="{Button_Name}"><!-- END Button Button_Insert -->
-                    <!-- BEGIN Button Button_Update --><input type="submit" id="Panel1universo_cdsButton_Update" class="Button" alt="Enviar" value="Grabar" name="{Button_Name}"><!-- END Button Button_Update -->
-                    <!-- BEGIN Button Button_Delete --><input type="submit" id="Panel1universo_cdsButton_Delete" class="Button" alt="Borrar" value="Borrar" name="{Button_Name}"><!-- END Button Button_Delete --></td>
+                    <!-- BEGIN Button Button_Insert --><input type="submit" id="Panel1universo_cdsButton_Insert" class="Button" value="Insertar" alt="Agregar" name="{Button_Name}"><!-- END Button Button_Insert -->
+                    <!-- BEGIN Button Button_Update --><input type="submit" id="Panel1universo_cdsButton_Update" class="Button" value="Grabar" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Update -->
+                    <!-- BEGIN Button Button_Delete --><input type="submit" id="Panel1universo_cdsButton_Delete" class="Button" value="Borrar" alt="Borrar" name="{Button_Name}"><!-- END Button Button_Delete --></td>
                 </tr>
               </table>
             </td>
@@ -345,13 +345,13 @@ jQuery(function ($) {
     <td>
       <!-- BEGIN Record mc_universo_cds -->
       <form id="mc_universo_cds" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td valign="top">
-              <table class="Header" cellspacing="0" cellpadding="0" border="0">
+              <table class="Header" border="0" cellspacing="0" cellpadding="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-                  <td class="th"><strong>Editar Requerimiento Técnico</strong></td> 
+                  <td class="th"><strong>Editar requerimiento técnico</strong></td> 
                   <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
                 </tr>
               </table>
@@ -363,15 +363,15 @@ jQuery(function ($) {
                 </tr>
                 <!-- END Error -->
                 <tr class="Controls">
-                  <td class="th"><label for="mc_universo_cdsEsReqTecnico">Es Req Tecnico</label></td> 
+                  <td class="th"><label for="mc_universo_cdsEsReqTecnico">Es req. técnico</label></td> 
                   <td><input type="checkbox" id="mc_universo_cdsEsReqTecnico" value="1" name="{EsReqTecnico_Name}" {EsReqTecnico}></td>
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_universo_cdsReqTecnico">Req Tecnico</label></td> 
+                  <td class="th"><label for="mc_universo_cdsReqTecnico">Req. técnico</label></td> 
                   <td>
                     <select id="mc_universo_cdsReqTecnico" name="{ReqTecnico_Name}">
-                      <option selected value="">Seleccionar Valor</option>
+                      <option selected value="">Seleccionar valor</option>
                       {ReqTecnico_Options}
                     </select>
  </td>
@@ -379,7 +379,7 @@ jQuery(function ($) {
  
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="2">
-                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_universo_cdsButton_Update" class="Button" alt="Enviar" value="Enviar" name="{Button_Name}"><!-- END Button Button_Update --></td>
+                    <!-- BEGIN Button Button_Update --><input type="submit" id="mc_universo_cdsButton_Update" class="Button" value="Enviar" alt="Enviar" name="{Button_Name}"><!-- END Button Button_Update --></td>
                 </tr>
               </table>
             </td>
