--- a/TableroSLAs/IncidentesDetalleNS.html
+++ b/TableroSLAs/IncidentesDetalleNS.html
@@ -25,114 +25,117 @@
 </head>
 <body>
 <p>{Header}</p>
+<div style="FLOAT: right">
+  <table>
+    <tr>
+      <td></td> 
+      <td>{MenuTablero}&nbsp;</td>
+    </tr>
+  </table>
+</div>
 <!-- BEGIN Record mc_info_incidentesSearch -->
 <form id="mc_info_incidentesSearch" method="post" name="{HTMLFormName}" action="{Action}">
-  <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
+  <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
     <tr>
       <td valign="top">
-        <table class="Header" cellspacing="0" cellpadding="0" border="0">
+        <table class="Header" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
             <td class="th"><strong>Filtro</strong></td> 
-            <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
+            <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
           </tr>
- 
         </table>
  
         <table class="Record" cellspacing="0" cellpadding="0">
           <!-- BEGIN Error -->
           <tr id="{@error-block}" class="Error">
-            <td colspan="8">{Error}</td> 
+            <td colspan="8">{Error}</td>
           </tr>
- <!-- END Error -->
+          <!-- END Error -->
           <tr class="Controls">
             <td class="th">Incidente:</td> 
-            <td class="th"><label for="mc_info_incidentesSearchs_Id_incidente_param" style="display: none;">TextBox1</label><input type="text" name="{s_Id_incidente_param_Name}" value="{s_Id_incidente_param}" id="mc_info_incidentesSearchs_Id_incidente_param"></td> 
+            <td class="th"><label for="mc_info_incidentesSearchs_Id_incidente_param" style="display: none;">TextBox1</label><input type="text" id="mc_info_incidentesSearchs_Id_incidente_param" value="{s_Id_incidente_param}" name="{s_Id_incidente_param_Name}"></td> 
             <td class="th"><label for="mc_info_incidentesSearchs_Id_incidente_param">Proveedor</label></td> 
             <td>&nbsp; 
               <select id="s_cds_param" name="{s_id_proveedor_Name}">
-                <option selected value="">Select Value</option>
- {s_id_proveedor_Options} 
+                <option selected value="">Seleccionar valor</option>
+                {s_id_proveedor_Options}
               </select>
  </td> 
             <td>Mes </td> 
             <td>&nbsp; <label for="mc_info_incidentesSearchs_MesReporte" style="display: none;">ListBox1</label> 
               <select id="mc_info_incidentesSearchs_MesReporte" name="{s_MesReporte_Name}">
                 <option selected value="">{res:CCS_SelectValue}</option>
- {s_MesReporte_Options} 
+                {s_MesReporte_Options}
               </select>
  </td> 
             <td>Año </td> 
             <td>
               <select id="mc_info_incidentesSearchs_AnioReporte" name="{s_AnioReporte_Name}">
-                <option selected value="">Select Value</option>
- {s_AnioReporte_Options} 
+                <option selected value="">Seleccionar valor</option>
+                {s_AnioReporte_Options}
               </select>
- </td> 
+ </td>
           </tr>
  
           <tr class="Bottom">
             <td style="TEXT-ALIGN: right" colspan="8">
-              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_info_incidentesSearchButton_DoSearch" class="Button" alt="Search" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td> 
+              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_info_incidentesSearchButton_DoSearch" class="Button" value="Buscar" alt="Search" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
           </tr>
- 
         </table>
- </td> 
+      </td>
     </tr>
- 
   </table>
 </form>
 <!-- END Record mc_info_incidentesSearch -->
 <!-- BEGIN Grid mc_info_incidentes -->
-<table id="mc_info_incidentes" class="MainTable" cellspacing="0" cellpadding="0" border="0">
+<table id="mc_info_incidentes" class="MainTable" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td valign="top">
-      <table class="Header" cellspacing="0" cellpadding="0" border="0">
+      <table class="Header" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
-          <td class="th"><strong>Lista de Incidentes Niveles de Servicio</strong></td> 
-          <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
+          <td class="th"><strong>Lista de incidentes niveles de servicio</strong></td> 
+          <td class="HeaderRight"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td>
         </tr>
- 
       </table>
- <strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong> 
+      <strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong><strong></strong> 
       <table class="Grid" cellspacing="0" cellpadding="0">
         <tr class="Caption">
           <th scope="col">
-          <!-- BEGIN Sorter Sorter_Id_incidente --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter_Id_incidente">Id Incidente</a> 
+          <!-- BEGIN Sorter Sorter_Id_incidente --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter_Id_incidente">Id incidente</a> 
           <!-- BEGIN Asc_On --><img alt="Ascending" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descending" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Id_incidente --></th>
  
           <th scope="col">
-          <!-- BEGIN Sorter Sorter_ServicioNegocio --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter_ServicioNegocio">Servicio Negocio</a> 
+          <!-- BEGIN Sorter Sorter_ServicioNegocio --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter_ServicioNegocio">Servicio negocio</a> 
           <!-- BEGIN Asc_On --><img alt="Ascending" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descending" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_ServicioNegocio --></th>
  
           <th scope="col">
-          <!-- BEGIN Sorter Sorter_Aplicacion --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter_Aplicacion">Aplicacion</a> 
+          <!-- BEGIN Sorter Sorter_Aplicacion --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter_Aplicacion">Aplicación</a> 
           <!-- BEGIN Asc_On --><img alt="Ascending" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descending" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter_Aplicacion --></th>
  
           <th scope="col">Severidad&nbsp;</th>
  
           <th scope="col">
-          <!-- BEGIN Sorter Sorter1 --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter1">Manejo de Incidentes<br>
-          Tiempo de Atención</a> 
+          <!-- BEGIN Sorter Sorter1 --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter1">Manejo de incidentes<br>
+          Tiempo de atención</a> 
           <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter1 --></th>
  
           <th scope="col">
-          <!-- BEGIN Sorter Sorter2 --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter2">Manejo de Incidentes<br>
-          Tiempo de Solución</a> 
+          <!-- BEGIN Sorter Sorter2 --><span class="Sorter"><a href="{Sort_URL}" id="mc_info_incidentesSorter2">Manejo de incidentes<br>
+          Tiempo de solución</a> 
           <!-- BEGIN Asc_On --><img alt="Ascendente" src="Styles/{CCS_Style}/Images/Asc.gif"><!-- END Asc_On -->
           <!-- BEGIN Desc_On --><img alt="Descendente" src="Styles/{CCS_Style}/Images/Desc.gif"><!-- END Desc_On --></span><!-- END Sorter Sorter2 --></th>
  
           <th scope="col">Observaciones&nbsp;</th>
  
-          <th scope="col">Liga Evidencia</th>
+          <th scope="col">Liga evidencia</th>
  
           <th scope="col">Observaciones SAT</th>
- 
         </tr>
  
         <!-- BEGIN Row -->
@@ -143,48 +146,47 @@
             <div align="center">
               {ServicioNegocio} 
             </div>
- &nbsp;</td> 
+            &nbsp;</td> 
           <td>
             <div align="center">
               {Aplicacion} 
             </div>
- &nbsp;</td> 
+            &nbsp;</td> 
           <td>&nbsp; 
             <div align="center">
               {Severidad} 
             </div>
- </td> 
+          </td> 
           <td align="center">&nbsp; 
             <p align="center"><img id="mc_info_incidentesPanel1Cumple_Inc_TiempoAsignacion_{mc_info_incidentes:rowNumber}" alt="" src="{Cumple_Inc_TiempoAsignacion}"></p>
- </td> 
+          </td> 
           <td>&nbsp; 
             <p align="center"><img id="mc_info_incidentesPanel1Cumple_Inc_TiempoSolucion_{mc_info_incidentes:rowNumber}" alt="" src="{Cumple_Inc_TiempoSolucion}"></p>
- </td> 
+          </td> 
           <td>&nbsp; 
             <div>
               {Obs_Manuales} 
             </div>
- </td> 
+          </td> 
           <td><a href="{lkEvidencia_Src}" id="mc_info_incidentesPanel1lkEvidencia_{mc_info_incidentes:rowNumber}">Ver Evidencia</a></td> 
-          <td>{Obs_SAT}</td> 
+          <td>{Obs_SAT}</td>
         </tr>
  <!-- END Panel Panel1 --><!-- END Row -->
         <tr class="NoRecords">
-          <td colspan="9"><strong>Número de Registros :</strong>&nbsp; {lblRegistros}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-            <!-- BEGIN ImageLink ImageLink1 --><a href="{ImageLink1}" id="mc_info_incidentesImageLink1_{mc_info_incidentes:rowNumber}"><img style="BORDER-LEFT-WIDTH: 0px; HEIGHT: 28px; BORDER-RIGHT-WIDTH: 0px; WIDTH: 33px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; border-image: none" alt="{ImageLink1}" src="Images/xls.jpg" width="203" height="202"></a><!-- END ImageLink ImageLink1 --></td> 
+          <td colspan="9"><strong>Número de registros :</strong>&nbsp; {lblRegistros}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            <!-- BEGIN ImageLink ImageLink1 --><a href="{ImageLink1}" id="mc_info_incidentesImageLink1_{mc_info_incidentes:rowNumber}"><img style="BORDER-RIGHT-WIDTH: 0px; WIDTH: 33px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; HEIGHT: 28px; BORDER-LEFT-WIDTH: 0px; border-image: none" alt="{ImageLink1}" src="Images/xls.jpg" width="203" height="202"></a><!-- END ImageLink ImageLink1 --></td>
         </tr>
- 
         <!-- BEGIN NoRecords -->
         <tr class="NoRecords">
-          <td colspan="9">No records</td> 
+          <td colspan="9">No hay registros</td>
         </tr>
- <!-- END NoRecords -->
+        <!-- END NoRecords -->
         <tr class="Footer">
           <td colspan="9">
-            <!-- BEGIN Navigator Navigator --><span class="Navigator">Records per page 
+            <!-- BEGIN Navigator Navigator --><span class="Navigator">Registros por página: 
             <select style="VERTICAL-ALIGN: middle" name="{FormName}PageSize" data-grid-size="{FormName}">
               <option selected value="">-</option>
- {PageSize_Options} 
+ {PageSize_Options}
             </select>
  
             <!-- BEGIN First_On --><a href="{First_URL}"><img alt="{First_URL}" src="Styles/{CCS_Style}/Images/First.gif"></a> <!-- END First_On -->
@@ -194,11 +196,10 @@
             <!-- BEGIN Next_On --><a href="{Next_URL}"><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/Next.gif"></a> <!-- END Next_On -->
             <!-- BEGIN Next_Off --><img alt="{Next_URL}" src="Styles/{CCS_Style}/Images/NextOff.gif"><!-- END Next_Off -->
             <!-- BEGIN Last_On --><a href="{Last_URL}"><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/Last.gif"></a> <!-- END Last_On -->
-            <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td> 
+            <!-- BEGIN Last_Off --><img alt="{Last_URL}" src="Styles/{CCS_Style}/Images/LastOff.gif"><!-- END Last_Off --></span><!-- END Navigator Navigator -->&nbsp;</td>
         </tr>
- 
       </table>
- </td> 
+    </td>
   </tr>
 </table>
 <!-- END Grid mc_info_incidentes --><br>
