--- a/TableroSLAs/MenuTablero.html
+++ b/TableroSLAs/MenuTablero.html
@@ -22,7 +22,7 @@ function ufSeleccionaTablero(){
  </td> 
       <td>
         <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: rgb(160,160,160); WIDTH: 100px; HEIGHT: 30px; FONT-WEIGHT: bold">
-<a href="{lkCuadroNSInc_Src}" style="POSITION: relative; COLOR: rgb(250,250,250); TOP: 5%" id="MenuTablerolkCuadroNSInc">Cuadro NS Incidentes</a> 
+<a href="{lkCuadroNSInc_Src}" style="POSITION: relative; COLOR: rgb(250,250,250); TOP: 5%" id="MenuTablerolkCuadroNSInc">Cuadro NS incidentes</a> 
         </div>
  
         <td>
@@ -32,7 +32,7 @@ function ufSeleccionaTablero(){
  </td> 
         <td>
           <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: rgb(160,160,160); WIDTH: 100px; HEIGHT: 30px; FONT-WEIGHT: bold">
-<a href="{lkDetalleIncidentesNS_Src}" style="POSITION: relative; COLOR: rgb(250,250,250); TOP: 5%" id="MenuTablerolkDetalleIncidentesNS">Detalle NS Incidentes</a> 
+<a href="{lkDetalleIncidentesNS_Src}" style="POSITION: relative; COLOR: rgb(250,250,250); TOP: 5%" id="MenuTablerolkDetalleIncidentesNS">Detalle NS incidentes</a> 
           </div>
  
           <td>
@@ -43,7 +43,7 @@ function ufSeleccionaTablero(){
           <td>
             <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: rgb(160,160,160); WIDTH: 100px; HEIGHT: 30px; COLOR: rgb(250,250,250); FONT-WEIGHT: bold" id="divReporteExcel" onclick="ufSeleccionaTablero()">
               <div style="POSITION: relative; TOP: 7px; CURSOR: pointer; TEXT-DECORATION: underline">
-                Reporte Excel 
+                Reporte excel 
               </div>
  
             </div>
@@ -51,7 +51,7 @@ function ufSeleccionaTablero(){
           <td>
             <!-- BEGIN Panel pnlDictamen -->
             <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: rgb(160,160,160); WIDTH: 100px; HEIGHT: 30px; FONT-WEIGHT: bold">
-<a href="{Link1_Src}" id="MenuTableropnlDictamenLink1" style="top: 20%; color: rgb(250, 250, 250); position: relative;display:{sGrupoSAT}">Pre-Dictamen</a> 
+<a href="{Link1_Src}" id="MenuTableropnlDictamenLink1" style="top: 20%; color: rgb(250, 250, 250); position: relative;display:{sGrupoSAT}">Pre-dictamen</a> 
             </div>
  <!-- END Panel pnlDictamen --></td> 
         </tr>
